@@ -36,21 +36,40 @@ class RestBlockTypeTest extends AbstractRestTest {
 
                 // Should have "blockTypes" array according to documentation
                 if (jsonNode.has("blockTypes")) {
-                    JsonNode blockTypes = jsonNode.get("blockTypes");
-                    assertThat(blockTypes.isArray()).isTrue();
+                    // Try to parse as BlockTypeListResponseDTO for full contract validation
+                    try {
+                        BlockTypeListResponseDTO listResponseDTO = objectMapper.treeToValue(jsonNode, BlockTypeListResponseDTO.class);
 
-                    System.out.println("BlockTypes found: " + blockTypes.size());
-                    System.out.println("BlockTypes found: " + blockTypes.size());
+                        if (listResponseDTO.getBlockTypes() != null && !listResponseDTO.getBlockTypes().isEmpty()) {
+                            System.out.println("BlockTypes found (via DTO): " + listResponseDTO.getBlockTypes().size());
+                            System.out.println("Count: " + listResponseDTO.getCount());
+                            System.out.println("Limit: " + listResponseDTO.getLimit());
+                            System.out.println("Offset: " + listResponseDTO.getOffset());
 
-                    if (!blockTypes.isEmpty()) {
-                        JsonNode firstBlockType = blockTypes.get(0);
+                            BlockTypeDTO firstBlockType = listResponseDTO.getBlockTypes().getFirst();
+                            assertThat(firstBlockType.getId()).isNotEqualTo(0.0);
 
-                        // Parse using generated BlockType (core type)
-                        BlockType coreBlockType = objectMapper.treeToValue(firstBlockType, BlockType.class);
-                        assertThat(coreBlockType.getId()).isNotEqualTo(0.0);
+                            System.out.println("Sample BlockType ID: " + firstBlockType.getId());
+                            System.out.println("Sample BlockType Description: " + firstBlockType.getDisplayName());
+                        }
+                    } catch (Exception e) {
+                        // Fallback to manual parsing for backwards compatibility
+                        System.out.println("Falling back to manual parsing: " + e.getMessage());
+                        JsonNode blockTypes = jsonNode.get("blockTypes");
+                        assertThat(blockTypes.isArray()).isTrue();
 
-                        System.out.println("Sample BlockType ID: " + coreBlockType.getId());
-                        System.out.println("Sample BlockType Description: " + coreBlockType.getDescription());
+                        System.out.println("BlockTypes found: " + blockTypes.size());
+
+                        if (!blockTypes.isEmpty()) {
+                            JsonNode firstBlockType = blockTypes.get(0);
+
+                            // Parse using generated BlockType (core type)
+                            BlockType coreBlockType = objectMapper.treeToValue(firstBlockType, BlockType.class);
+                            assertThat(coreBlockType.getId()).isNotEqualTo(0.0);
+
+                            System.out.println("Sample BlockType ID: " + coreBlockType.getId());
+                            System.out.println("Sample BlockType Description: " + coreBlockType.getDescription());
+                        }
                     }
 
                 } else if (jsonNode.isArray()) {
